--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=bachelor,tocarialchapter,table,xcdraw,draft]{thuthesis}
+\documentclass[degree=bachelor,tocarialchapter,table,xcdraw]{thuthesis}
 
 % 在\documentclass中加入了 ,table,xcdraw 解决了用于表格颜色填充的宏包 \usepackage[table,xcdraw]{xcolor} 导致的xcolor不同参数重复声明的问题
 
