--- a/main.tex
+++ b/main.tex
@@ -91,7 +91,7 @@
 
 %% 附录
 \begin{appendix}
-    \input{data/Appendix-EN}
+    % \input{data/Appendix-EN}
     \input{data/Appendix-CN}
     % \input{data/Appendix-PCB}
     % \input{data/Appendix-Code}
