--- a/data/Intro.tex
+++ b/data/Intro.tex
@@ -58,9 +58,11 @@
 %     \label{tab:PowerGenerated}
 % \end{table}
 
-在众多节点需要优化的情境下，传统的集中式优化存在通信堵塞、节点故障、算力不足等问题。
+% 在众多节点需要优化的情境下，传统的集中式优化存在通信堵塞、节点故障、算力不足等问题。
 
-面对这一挑战，本文受区块链技术的PoW和PoS协议启发，提出了一套用于电力系统经济调度的分布式算法，依靠众多的节点计算，实现了去中心化，提高了电力系统的优化能力，可以解决上述问题。
+% 面对这一挑战，
+
+本文受区块链技术的PoW和PoS协议启发，提出了一套用于电力系统经济调度的分布式算法，依靠众多的节点计算，实现了去中心化，提高了电力系统的优化能力，可以解决上述问题。
 
 \section{国内外研究现状}
 
@@ -101,7 +103,7 @@
 
 \subsection{区域级解耦与节点级解耦}
 
-分布式经济调度问题的相关研究，可以划分为区域级解耦与节点级解耦：
+% 分布式经济调度问题的相关研究，可以划分为区域级解耦与节点级解耦：
 
 区域级解耦即讲整个大电网分解成多个子区域，在区域和区域之间进行信息交换。这方面的研究较为成熟，主要算法包括拉格朗日函数松弛、增广拉格朗日松弛、交替方向乘子法、最优性条件松弛、边际等效、Benders割等。
 
