--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -60,23 +60,23 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
     \label{fig:Directed-graph}
 \end{figure}
 
-各节点处机组参数与负荷如表~\ref{tab:example}：
+% 各节点处机组参数与负荷如表~\ref{tab:example}：
 
-\begin{table}[htbp]
-    \centering
-%    \resizebox{\textwidth}{!}{%
-    \begin{tabular}{@{}ccccc@{}}
-    \toprule
-    \multicolumn{1}{c}{Node} & $\alpha_{i}(\mathrm{MW})$  & $\beta_{i} \quad\left(\mathrm{MW}^{2} / \mathrm{S}\right)$ & $\gamma_{i}(\mathrm{S})$   & $L_{i}(\mathrm{MW})$    \\ \midrule
-    1                        & -1 & 1 & 0.2 & 15.5 \\
-    2                        & -2 & 2 & 0.1 & 0    \\
-    3                        & -3 & 3 & 0.5 & 15.5 \\
-    4                        & -1 & 2 & 0.7 & 0    \\ \bottomrule
-    \end{tabular}
-%    }缩放表格（字会变得很大）
-    \caption{4节点算例机组参数与实时负荷}
-    \label{tab:example}
-\end{table}
+% \begin{table}[htbp]
+%     \centering
+% %    \resizebox{\textwidth}{!}{%
+%     \begin{tabular}{@{}ccccc@{}}
+%     \toprule
+%     \multicolumn{1}{c}{Node} & $\alpha_{i}(\mathrm{MW})$  & $\beta_{i} \quad\left(\mathrm{MW}^{2} / \mathrm{S}\right)$ & $\gamma_{i}(\mathrm{S})$   & $L_{i}(\mathrm{MW})$    \\ \midrule
+%     1                        & -1 & 1 & 0.2 & 15.5 \\
+%     2                        & -2 & 2 & 0.1 & 0    \\
+%     3                        & -3 & 3 & 0.5 & 15.5 \\
+%     4                        & -1 & 2 & 0.7 & 0    \\ \bottomrule
+%     \end{tabular}
+% %    }缩放表格（字会变得很大）
+%     \caption{4节点算例机组参数与实时负荷}
+%     \label{tab:example}
+% \end{table}
 
 其邻接矩阵为：
 
