--- a/data/Movement.tex
+++ b/data/Movement.tex
@@ -130,9 +130,13 @@ $V_{x}^{w}$和$V_{y}^{w}$分别代表世界坐标系下x与y轴的方向，$V_{x
     \label{fig:Velocities-Mecanum}
 \end{figure}
 
-涉及四个系统：地面$\Sigma_{0}$，车$\Sigma_{1}$，车轮$\Sigma_{2}$和辊子$\Sigma_{3}$，这时在点C（接触点）接触地面。注意，该点始终位于车轮$\Sigma_{2}$的轴a之下：它是车轮转轴a和辊子转轴b在$\Sigma_{0}$中的正交投影的交点。仅在b处于水平位置的情况下，C才位于车轮中心A下方！
+涉及四个系统：地面$\Sigma_{0}$，车$\Sigma_{1}$，车轮$\Sigma_{2}$和辊子$\Sigma_{3}$，这时在点C（接触点）接触地面。注意，该点始终位于车轮$\Sigma_{2}$的轴a之下：它是车轮转轴a和辊子转轴b在$\Sigma_{0}$中的正交投影的交点。
 
-为了进行分析描述，我们选择$\Sigma_{1}$中的任意点$O_{1}$（“车辆中心 vehicle center”）作为坐标系$S_{1}:=\left\{O_{1} ; \mathbf{e}_{1 x}, \mathbf{e}_{1 y}, \mathbf{e}_{1 z}\right\}$的原点，与$\Sigma_{1}$相切，x和y轴平行于地面。车轮中心A可能有x和y坐标$a_x$和$a_y$。考虑到$S_1$和α可以表示$\mathbf{e}_{1 x}$与车轮轴线a之间的角度，则：
+% 仅在b处于水平位置的情况下，C才位于车轮中心A下方！
+
+% 为了进行分析描述，
+
+我们选择$\Sigma_{1}$中的任意点$O_{1}$（“车辆中心 vehicle center”）作为坐标系$S_{1}:=\left\{O_{1} ; \mathbf{e}_{1 x}, \mathbf{e}_{1 y}, \mathbf{e}_{1 z}\right\}$的原点，与$\Sigma_{1}$相切，x和y轴平行于地面。车轮中心A可能有x和y坐标$a_x$和$a_y$。考虑到$S_1$和α可以表示$\mathbf{e}_{1 x}$与车轮轴线a之间的角度，则：
 
 \begin{equation}
     \mathbf{a}=\left(\begin{array}{c}
