--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -115,9 +115,9 @@ CH340C内置晶振，最为合适。
 
 % 下图是统一供电方式下MCU 单片机通过TTL 串口连接CH340 芯片实现USB通讯的参考电路。
 
-该产品选择自供电方式，VCC 支持5V 或者3.3V（VCC 为3.3V 时V3 需短接到VCC），完全不使用USB 总线电源VBUS（如有需要MCU可以通过I/O 串电阻后检测其是否有效）。CH340 与MCU 使用同一电源VCC，所以CH340与MCU 之间不存在双电源通过I/O相互电流倒灌的情形。
+% 该产品选择自供电方式，VCC 支持5V 或者3.3V（VCC 为3.3V 时V3 需短接到VCC），完全不使用USB 总线电源VBUS（如有需要MCU可以通过I/O 串电阻后检测其是否有效）。CH340 与MCU 使用同一电源VCC，所以CH340与MCU 之间不存在双电源通过I/O相互电流倒灌的情形。
 
-CH340没有使用到的信号线都可以悬空。对于CH340C/N/K/E/B 芯片，无需X6 和C17 及C18。
+% CH340没有使用到的信号线都可以悬空。对于CH340C/N/K/E/B 芯片，无需X6 和C17 及C18。
 
 CH340C原理图如图~\ref{fig:Circuit-10}所示。
 
